[sonar] Fix hopefully the last large set of issues.